<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_container"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:id="@+id/email_layout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:boxStrokeErrorColor="@color/black"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="?attr/colorPrimaryVariant"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:id="@+id/login_edt"
                android:text="demo"
                android:inputType="textEmailAddress"
                app:textInputLayoutFocusedRectEnabled="true"
                android:imeOptions="actionGo"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_layout"
            android:id="@+id/password_layout"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/password"
            app:boxStrokeErrorColor="@color/black"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="?attr/colorPrimaryVariant"
            android:focusedByDefault="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/password_edt"
                android:text="12345"
                app:textInputLayoutFocusedRectEnabled="true"
                android:imeOptions="actionGo"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:id="@+id/loginbutton"
            app:cornerRadius="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password_layout"
            />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/logout_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/user_logged"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/titleview"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Token : "
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titleview"
            android:id="@+id/tokenview"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:id="@+id/logoutbutton"
            app:cornerRadius="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tokenview"
            />



    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jsonData"/>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
</layout>